--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,11 +13,9 @@ build:
   number: 0
   script:
     - go run -mod=vendor build.go --enable-cgo  # [build_platform == target_platform]
-    - set _goos=$GOOS      # [build_platform != target_platform and not win]
-    - unset GOOS           # [build_platform != target_platform and not win]
     - set _goarch=$GOARCH  # [build_platform != target_platform and not win]
     - unset GOARCH         # [build_platform != target_platform and not win]
-    - go run -mod=vendor build.go --enable-cgo --goos ${_goos} --goarch ${_goarch}  # [build_platform != target_platform and not win]
+    - go run -mod=vendor build.go --enable-cgo --goarch ${_goarch}  # [build_platform != target_platform and not win]
     - mkdir -p $PREFIX/bin          # [not win]
     - mv restic $PREFIX/bin/restic  # [not win]
     - mkdir -p %PREFIX%\bin                  # [win]
