--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,7 +25,9 @@ test:
 about:
   home: https://restic.net/
   license: BSD-2-Clause
-  license_file: LICENSE
+  license_file:
+    - LICENSE
+    - licenses/
   summary: Restic is a fast and secure backup program.
   description: |
     Restic is a modern backup program that can back up your files from Linux,
